--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Silicon-trail by Jephraim</title>
+    <title>Silicon-Trail - Begin Your Very Own Startup Adventure!</title>
+    <meta name="description" content="An adventure game where you make your way through Silicon Valley as a new startup"
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,8 +12,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Silicon-trail</h1>
-      <h2 class="project-tagline">game based on Oregon Trail where you make your way as a new startup</h2>
+      <h1 class="project-name">Silicon-Trail</h1>
+      <h2 class="project-tagline">An adventure game where you make your way through Silicon Valley as a new startup</h2>
       <a href="https://github.com/Jephraim/silicon-trail" class="btn">View on GitHub</a>
       <a href="https://github.com/Jephraim/silicon-trail/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/Jephraim/silicon-trail/tarball/master" class="btn">Download .tar.gz</a>
@@ -20,7 +21,7 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Silicon Trail!.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
