General Content Changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="page-header">
       <h1 class="project-name">Silicon-Trail</h1>
       <h2 class="project-tagline">An adventure game where you make your way through Silicon Valley as a new startup</h2>
-      <a href="https://github.com/Jephraim/silicon-trail" class="btn">Follow Me</a> On Twitter For Updates      
+      <a href="https://twitter.com/Jason_Ephraim" class="btn">Follow @Jason_Ephraim</a> On Twitter For Updates      
     </section>
 
     <section class="main-content">
@@ -23,15 +23,7 @@
 
 <p>Based upon the classic adventure game "Oregon Trail", You play as the founder of a new startup on the path to achieving success in Silicon Valley</p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Jephraim/silicon-trail">Silicon-trail</a> is maintained by <a href="https://github.com/Jephraim">Jephraim</a>.</span>
